catkin_ws/logs/flow_logger/build.make.007.log.stderr
/home/tuofeichen/SLAM/MAV-Project/catkin_ws/src/flow_logger/src/logger.cpp: In member function ‘void Logger::flowCallback(geometry_msgs::PoseStamped)’:
/home/tuofeichen/SLAM/MAV-Project/catkin_ws/src/flow_logger/src/logger.cpp:120:13: error: ‘flog_logname’ was not declared in this scope
   logname_w[flog_logname.size()]='\0';
             ^
make[2]: *** [CMakeFiles/flow_logger.dir/src/logger.cpp.o] Error 1
make[1]: *** [CMakeFiles/flow_logger.dir/all] Error 2
make: *** [all] Error 2
